@@ -6,8 +6,6 @@ LOCAL="$LOC"
 cat >"$TMP" <<EOF
 From: test@example.org
 Subject: test post
-X-Test-Header: one
-Content-Length: zip
 
 message goes here
 EOF
@@ -37,5 +35,26 @@ ${EZBIN}/ezmlm-send "$DIR" <"$TMP" >"$ERR" 2>&1 || \
 grepbody trailer is present
 
 ${RM} "$DIR"/flags
+
+touch "$DIR"/addtrailer
+for encoding in 7bit base64 quoted-printable
+do
+  cat >"$TMP" <<EOF
+From: test@example.org
+Subject: test post
+MIME-Version: 1.0
+Content-Type: text/plain
+Content-Transfer-Encoding: $encoding
+
+bWVzc2FnZSBnb2VzIGhlcmUK
+EOF
+  ${EZBIN}/ezmlm-send "$DIR" <"$TMP" >"$ERR" 2>&1 || \
+    fatal "failed to produce post"
+  if [ "$encoding" = base64 ]; then
+    grepbody DQp0cmFpbGVyIGlzIHByZXNlbnQNCg0K
+  else
+    grepbody 'trailer is present'
+  fi
+done
 
 ${ECHO} OK
